--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
 
 
   php:
+    container_name: phpcont
     build:
       context: .
       target: php #as specified at top of dockerfile
@@ -20,7 +21,29 @@ services:
       - database
       - redis
 
+
+  websocket:
+    container_name: websocketcont
+    build:
+      context: .
+      target: php #as specified at top of dockerfile
+      args:
+        - APP_ENV=${APP_ENV}
+    environment: 
+      - APP_ENV=${APP_ENV}
+      - CONTAINER_ROLE=websocket
+    working_dir: /var/www
+    volumes: 
+      - ./:/var/www
+    ports:
+      - 6001:6001
+    depends_on:
+      - database
+      - redis
+
+
   database:
+    container_name: dbcont
     image: mysql:8.0
     ports:
       - 3306:3306 
@@ -33,10 +56,47 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
   
   redis:
+    container_name: rediscont
     image: redis:alpine
     ports:
       - 6379:6379
     command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD}"
+
+
+  queue:
+    container_name: queuecont
+    build:
+      context: .
+      target: php #as specified at top of dockerfile
+      args:
+        - APP_ENV=${APP_ENV}
+    environment: 
+      - APP_ENV=${APP_ENV}
+      - CONTAINER_ROLE=queue
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www 
+
+  phpmyadmin:
+    container_name: phpmyadmincont
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - 4001:4001
+    environment:
+      - PMA_ARBITRARY=1 # Allow connection to any MySQL/MariaDB server
+      - PMA_HOST=database # MySQL/MariaDB host name
+      - PMA_USER=${DB_USERNAME} # MySQL/MariaDB username
+      - PMA_PASSWORD=${DB_PASSWORD} # MySQL/MariaDB password
+
+  node:
+    container_name: nodecont
+    build:
+      context: .
+      target: node #as specified at top of dockerfile
+    volumes:
+      - ./:/usr/src
+      - ./node_modules:/usr/src/node_modules
+    tty: true
 
 volumes:
   db-data: ~
